--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A super awesome app creation tool!",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build-linux": "electron-packager . SuperApp --ignore=node_modules/electron-* --platform=win32 --arch=x64 --version=0.27.2",
+    "package": "asar pack SuperApp-linux/resources/default_app/ SuperApp-linux/resources/app.asar"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,8 @@
     "url": "https://github.com/stenverbois/something-app/issues"
   },
   "devDependencies": {
+    "asar": "^0.7.1",
+    "electron-packager": "^4.1.2",
     "electron-prebuilt": "^0.27.2"
   }
 }
