--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
   },
   "devDependencies": {
     "asar": "^0.7.1",
+    "coffeelint": "^1.10.1",
     "electron-packager": "^4.1.2",
-    "electron-prebuilt": "^0.27.2"
+    "electron-prebuilt": "^0.27.2",
+    "grunt": "^0.4.5",
+    "grunt-coffeelint": "0.0.13",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-csslint": "^0.4.0",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-cson": "^0.15.0",
+    "grunt-lesslint": "^1.1.14"
   }
 }
