--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "something-app",
+  "name": "appy-creator",
   "version": "0.0.0",
   "description": "A super awesome app creation tool!",
   "main": "build/src/main.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/stenverbois/something-app.git"
+    "url": "https://github.com/stenverbois/appy-creator.git"
   },
   "keywords": [
     "app",
@@ -21,7 +21,7 @@
   ],
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/stenverbois/something-app/issues"
+    "url": "https://github.com/stenverbois/appy-creator/issues"
   },
   "devDependencies": {
     "asar": "^0.7.1",
