--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "asar": "^0.7.1",
     "coffeelint": "^1.10.1",
+    "css-loader": "^0.15.6",
     "electron-packager": "^4.1.2",
     "electron-prebuilt": "^0.27.2",
     "fs-jetpack": "^0.6.5",
@@ -38,6 +39,10 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-cson": "^0.15.0",
     "grunt-lesslint": "^1.1.14",
-    "q": "^1.4.1"
+    "html-loader": "^0.3.0",
+    "q": "^1.4.1",
+    "style-loader": "^0.12.3",
+    "vue-loader": "^2.1.1",
+    "webpack": "^1.10.5"
   }
 }
