--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "asar": "^0.7.1",
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.9.3",
     "coffeelint": "^1.10.1",
     "css-loader": "^0.15.6",
     "electron-packager": "^4.1.2",
@@ -39,10 +41,17 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-cson": "^0.15.0",
     "grunt-lesslint": "^1.1.14",
+    "grunt-webpack": "^1.0.11",
     "html-loader": "^0.3.0",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
     "q": "^1.4.1",
     "style-loader": "^0.12.3",
     "vue-loader": "^2.1.1",
-    "webpack": "^1.10.5"
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
+  },
+  "dependencies": {
+    "vue": "^0.12.9"
   }
 }
