--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "grunt-lesslint": "^1.1.14",
     "grunt-webpack": "^1.0.11",
     "html-loader": "^0.3.0",
+    "image-webpack-loader": "^1.6.1",
+    "imagemin": "^3.2.0",
     "jquery": "^2.1.4",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
