--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^0.17.0",
     "electron-packager": "^5.1.0",
     "electron-prebuilt": "^0.32.1",
+    "file-loader": "^0.8.4",
     "fs-jetpack": "^0.6.5",
     "grunt": "^0.4.5",
     "grunt-coffeelint": "0.0.13",
@@ -49,14 +50,17 @@
     "jquery": "^2.1.4",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
+    "materialize-css": "^0.97.1",
     "q": "^1.4.1",
     "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "vue-dnd": "^0.1.1",
     "vue-loader": "^3.0.3",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
+    "hammerjs": "^2.0.4",
     "vue": "^0.12.13"
   }
 }
