--- a/package.json
+++ b/package.json
@@ -29,20 +29,16 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
     "coffeelint": "^1.11.1",
+    "cson-loader": "^0.1.0",
     "css-loader": "^0.17.0",
     "electron-packager": "^5.1.0",
     "electron-prebuilt": "^0.32.1",
     "file-loader": "^0.8.4",
     "fs-jetpack": "^0.6.5",
     "grunt": "^0.4.5",
-    "grunt-coffeelint": "0.0.13",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-csslint": "^0.4.0",
-    "grunt-contrib-less": "^1.0.1",
-    "grunt-contrib-watch": "^0.6.1",
     "grunt-cson": "^0.15.0",
-    "grunt-lesslint": "^1.4.0",
     "grunt-webpack": "^1.0.11",
     "html-loader": "^0.3.0",
     "image-webpack-loader": "^1.6.1",
@@ -54,13 +50,13 @@
     "q": "^1.4.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "vue-dnd": "^0.1.1",
+    "vue-html-loader": "^1.0.0",
     "vue-loader": "^3.0.3",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "hammerjs": "^2.0.4",
-    "vue": "^0.12.13"
+    "vue": "^1.0.0-migration"
   }
 }
