--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "appy-creator",
-  "version": "0.0.0",
-  "description": "A super awesome app creation tool!",
-  "main": "build/src/browser/main.js",
-  "scripts": {
-    "start": "electron .",
-    "build": "grunt build",
-    "dev": "grunt dev"
-  },
+  "name": "appy-creat",
+  "version": "0.0.1",
+  "description": "App Creator",
+  "main": "dist/main.js",
+  "author": "Sten Verbois <stenverbois@gmail.com>",
+  "contributors": [
+    "Thierry Deruyttere <thierryderuyttere@gmail.com>"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/stenverbois/appy-creator.git"
@@ -16,47 +15,62 @@
     "app",
     "mobile"
   ],
-  "author": "Sten Verbois <stenverbois@gmail.com>",
-  "contributors": [
-    "Thierry Deruyttere <thierryderuyttere@gmail.com>"
-  ],
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/stenverbois/appy-creator/issues"
   },
-  "devDependencies": {
-    "asar": "^0.8.0",
-    "coffee-loader": "^0.7.2",
-    "coffee-script": "^1.10.0",
-    "coffeelint": "^1.11.1",
-    "cson-loader": "^0.1.0",
-    "css-loader": "^0.17.0",
-    "electron-packager": "^5.1.0",
-    "electron-prebuilt": "^0.32.1",
-    "file-loader": "^0.8.4",
-    "fs-jetpack": "^0.6.5",
-    "grunt": "^0.4.5",
-    "grunt-contrib-coffee": "^0.13.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-cson": "^0.15.0",
-    "grunt-webpack": "^1.0.11",
-    "html-loader": "^0.3.0",
-    "image-webpack-loader": "^1.6.1",
-    "imagemin": "^3.2.0",
-    "jquery": "^2.1.4",
-    "less": "^2.5.1",
-    "less-loader": "^2.2.0",
-    "materialize-css": "^0.97.1",
-    "q": "^1.4.1",
-    "style-loader": "^0.12.3",
-    "url-loader": "^0.5.6",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^3.0.3",
-    "webpack": "^1.12.1",
-    "webpack-dev-server": "^1.10.1"
+  "scripts": {
+    "dev": "webpack-dev-server --inline --hot --config build/webpack.dev.conf.js",
+    "build": "rimraf dist && webpack --progress --hide-modules --config build/webpack.prod.conf.js",
+    "test": "karma start build/karma.conf.js --single-run"
   },
   "dependencies": {
-    "hammerjs": "^2.0.4",
-    "vue": "^1.0.13"
+    "vue": "^1.0.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-runtime": "^5.8.0",
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.10.0",
+    "cson-loader": "^0.1.0",
+    "css-loader": "^0.23.0",
+    "electron-packager": "^5.2.0",
+    "electron-prebuilt": "^0.36.3",
+    "eslint": "^1.10.3",
+    "eslint-friendly-formatter": "^1.2.2",
+    "eslint-loader": "^1.2.0",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.4",
+    "function-bind": "^1.0.2",
+    "grunt": "^0.4.5",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-cson": "^0.16.0",
+    "html-loader": "^0.4.0",
+    "html-webpack-plugin": "^1.7.0",
+    "inject-loader": "^2.0.1",
+    "jasmine-core": "^2.4.1",
+    "jquery": "^2.2.0",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.15",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-spec-reporter": "0.0.23",
+    "karma-webpack": "^1.7.0",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "materialize-css": "^0.97.5",
+    "phantomjs": "^1.9.19",
+    "rimraf": "^2.5.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^8.0.0",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   }
 }
