--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "vue-html-loader": "^1.0.0",
     "vue-loader": "^8.0.0",
     "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
+    "webpack": "^2.0.7-beta",
     "webpack-dev-server": "^1.12.0"
   }
 }
