Logic output without actions

--- a/src/export/package.json
+++ b/src/export/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "underscore": "^1.8.3"
   }
 }
