Move materialize to scss setup

--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
     "karma-webpack": "^1.7.0",
     "less": "^2.5.3",
     "less-loader": "^2.2.2",
-    "materialize-css": "^0.97.5",
+    "node-sass": "^3.4.2",
     "phantomjs": "^1.9.19",
+    "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.5.0",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
